fix: text-align

--- a/src/components/pages/AddStickers/AddStickers.module.scss
+++ b/src/components/pages/AddStickers/AddStickers.module.scss
@@ -78,6 +78,7 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 16px;
+  text-align: left;
   width: 213px;
 }
 
